# boilerplate-starter-kits

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  create_admin.py  create_db.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: api.py  deps.py
app/api/routes/: auth.py  todos.py  users.py
app/core/: config.py  logging.py  rate_limiter.py  security.py
app/db/: base.py
app/models/: __init__.py  todo.py  user.py
app/schemas/: __init__.py  todo.py  user.py
app/services/: todo.py  user.py
app/utils/: debug_middleware.py  logging_middleware.py
tests/: conftest.py  test_auth.py  test_main.py  test_security.py  test_users.py
