[project]
name = "fastapi2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic[email]>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-jose>=3.5.0",
]
